--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,146 @@
 ---
+import { getSiteDetails } from "@src/utils/pocketbase";
+import { SEO } from "astro-seo";
+import { join } from "node:path";
+import { AstroFont } from "astro-font";
 
+import "@assets/css/reset.css";
+import "@assets/css/global.css";
+import PageNavigation from "@components/PageNavigation/PageNavigation.astro";
+import Container from "@components/Container.astro";
+
+const site = await getSiteDetails();
+const themeColor = site.theme_color;
 ---
 
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<meta name="color-scheme" content="light" />
+		<meta name="theme-color" content={site.theme_color} />
+		<meta name="robots" content="index, follow" />
+
+		<link
+			rel="icon"
+			type="image/jpg"
+			sizes="16x16"
+			href="/favicon/favicon-16x16.jpg"
+		/>
+		<link
+			rel="icon"
+			type="image/jpg"
+			sizes="32x32"
+			href="/favicon/favicon-32x32.jpg"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/favicon/apple-touch-icon.jpg"
+		/>
+		<link rel="icon" href="/favicon/favicon.ico" />
+		<link rel="manifest" href="/favicon/manifest.json" />
+		<link rel="sitemap" href="/sitemap.xml" />
+
+		<link rel="preconnect" href={site.url} />
+		<link rel="dns-prefetch" href={site.url} />
+		<link rel="alternate" href={site.url} hreflang="en" />
+		<link rel="alternate" href={site.url} hreflang="x-default" />
+
+		<slot set:html={site.analytics_id} />
+		<slot set:html={site.search_console} />
+
+		<SEO
+			title={site.title}
+			description={site.description}
+			openGraph={{
+				basic: {
+					title: site.title,
+					image: "/favicon/android-chrome-512x512.png",
+					type: "website",
+					url: site.url,
+				},
+			}}
+			twitter={{
+				creator: "@yellowpages254",
+				title: site.title,
+				description: site.description,
+				image: "/favicon/android-chrome-512x512.png",
+			}}
+		/>
+
+		<AstroFont
+			config={[
+				{
+					name: "Lato",
+					src: [
+						{
+							style: "normal",
+							weight: "400",
+							path: join(
+								process.cwd(),
+								"public",
+								"fonts",
+								"Lato_400_latin.woff2",
+							),
+						},
+						{
+							style: "normal",
+							weight: "400",
+							path: join(
+								process.cwd(),
+								"public",
+								"fonts",
+								"Lato_400_latin_ext.woff2",
+							),
+						},
+						{
+							style: "normal",
+							weight: "700",
+							path: join(
+								process.cwd(),
+								"public",
+								"fonts",
+								"Lato_700_latin.woff2",
+							),
+						},
+						{
+							style: "normal",
+							weight: "700",
+							path: join(
+								process.cwd(),
+								"public",
+								"fonts",
+								"Lato_700_latin_ext.woff2",
+							),
+						},
+					],
+					preload: false,
+					display: "swap",
+					selector: "body",
+					fallback: "sans-serif",
+				},
+			]}
+		/>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<PageNavigation
+			links={site.links}
+			logo={site.logo}
+			title={site.title}
+			collection={site}
+		/>
+		<main>
+			<Container>
+				<header
+					class="full-width"
+					style="background-color: var(--clr-primary-darker);height: 200dvh;"
+				>
+					<h1>Astro</h1>
+				</header>
+			</Container>
+		</main>
 	</body>
 </html>
+
+<style define:vars={{ themeColor }} is:global></style>
