--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,5 @@
 :root {
-    --heading-large: 32.44px;
+    --heading-large: 36.44px;
     --heading-large-weight: 700;
 
     --heading-medium: 28.83px;
@@ -20,14 +20,14 @@
     --body-small: 12px;
     --body-small-weight: 400;
 
+    --clr-primary-light: oklch(from var(--themeColor) calc(l + .90) c h);
     --clr-primary: oklch(from var(--themeColor) l c h);
-    --clr-primary-darker: oklch(from var(--themeColor) 25% c h);
-    --clr-primary-light: oklch(from var(--themeColor) calc(l - .40) c h);
+    --clr-primary-darker: oklch(from var(--themeColor) calc(l - .40) c h);
 
     --clr-neutral-light: #fafafa;
     --clr-neutral: #d9d9d9;
     --clr-neutral-dark: #a6a6a6;
-    --clr-neutral-darker: #0a0a0a;
+    --clr-neutral-darker: oklch(from var(--themeColor) calc(l - .90) c h);
 
     --size-000: -.5rem;
     --size-00: -.25rem;
@@ -46,10 +46,31 @@
     --size-13: 15rem;
     --size-14: 20rem;
     --size-15: 30rem;
+
+    --container-padding-block: var(--size-8);
+    --container-padding-inline: var(--size-3);
+
+    --shadow-sm: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+
+}
+
+@media (min-width: 768px) {
+    :root {
+        --container-padding-block: var(--size-9);
+        --container-padding-inline: var(--size-4);
+    }
+}
+
+@media (min-width: 1024px) {
+    :root {
+        --container-padding-block: var(--size-10);
+        --container-padding-inline: var(--size-5);
+    }
 }
 
 html {
     font-size: 16px;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -103,6 +124,15 @@ h1 {
     grid-column: full-width;
 }
 
+[data-highlight="true"] {
+    color: oklch(from var(--clr-primary-darker) calc(l + .90) c h);
+    background-color: var(--clr-primary-darker);
+}
+
+[data-highlight="true"] h2 {
+    color: oklch(from var(--clr-primary-darker) calc(l + .80) c calc(h + 180));
+}
+
 button {
     background-color: var(--clr-primary);
     /* Primary color */
@@ -123,7 +153,7 @@ button {
 }
 
 button:hover {
-    background-color: var(--clr-primary-darker);
+    background-color: oklch(from var(--clr-primary-darker) calc(l + .40) c calc(h + 180));
     /* Darker shade on hover */
 }
 
