--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,31 @@
 ---
-import { getSiteDetails } from "@src/utils/pocketbase";
+import { getSiteDetails, getHero, getPages } from "@src/utils/pocketbase";
 import { SEO } from "astro-seo";
 import { join } from "node:path";
 import { AstroFont } from "astro-font";
 
+interface Page {
+	[key: string]: any;
+}
+
 import "@assets/css/reset.css";
 import "@assets/css/global.css";
 import PageNavigation from "@components/PageNavigation/PageNavigation.astro";
-import Container from "@components/Container.astro";
+import PageHero from "@components/Hero/PageHero.astro";
+import Partners from "@components/Partners/Partners.astro";
+import FancyAbout from "@components/About/FancyAbout.astro";
+import Services from "@components/Services/Services.astro";
+import FullContact from "@components/Contact/FullContact.astro";
+import TinyFooter from "@components/Footer/TinyFooter.astro";
 
 const site = await getSiteDetails();
+const {
+	title,
+	excerpt,
+	expand: { image },
+} = await getHero();
+const pages = await getPages();
+
 const themeColor = site.theme_color;
 ---
 
@@ -125,21 +141,34 @@ const themeColor = site.theme_color;
 	</head>
 	<body>
 		<PageNavigation
-			links={site.links}
+			links={site.nav_links}
 			logo={site.logo}
 			title={site.title}
 			collection={site}
+			style={site.nav_style}
 		/>
 		<main>
-			<Container>
-				<header
-					class="full-width"
-					style="background-color: var(--clr-primary-darker);height: 200dvh;"
-				>
-					<h1>Astro</h1>
-				</header>
-			</Container>
+			<PageHero title={title} excerpt={excerpt} image={image} />
+			{
+				pages.map((page: Page) =>
+					page.page_type === "partner" ? (
+						<Partners page={page} />
+					) : page.page_type === "about us" ? (
+						<FancyAbout page={page} />
+					) : page.page_type === "services" ? (
+						<Services page={page} />
+					) : page.page_type.includes("contact") ? (
+						<FullContact page={page} />
+					) : null,
+				)
+			}
 		</main>
+
+		<TinyFooter
+			title={site.title}
+			parent_site_title={site.parent_site_title}
+			parent_site_url={site.parent_site_url}
+		/>
 	</body>
 </html>
 
