--- a/src/components/About/FancyAbout.astro
+++ b/src/components/About/FancyAbout.astro
@@ -13,7 +13,7 @@ const { width, height } = await inferRemoteSize(
 );
 ---
 
-<div id="about-us" class="fancy-about full-width" data-highlight="true">
+<div id="about-us" class="fancy-about container full-width" data-highlight="true">
     <Container>
         <div class="fancy_about__content--top">
             <article class="fancy_about__content--bottom">
