--- a/src/components/Cards/Cards.astro
+++ b/src/components/Cards/Cards.astro
@@ -2,12 +2,19 @@
 interface Props {
     card_type: string;
     cards: [];
+    data: {
+        [key: string]: any
+    }
 }
 import Basic from "./Basic/Basic.astro";
 import BlockyCards from "./Blocky/BlockyCards.astro";
+import InfoCard from "./Info/InfoCard.astro";
+// import StatsGrid from "./StatsGrid/StatsGrid.astro";
 
-const { card_type, cards } = Astro.props;
+const { card_type, cards, data } = Astro.props;
 ---
 
 {card_type === "blocky" && <BlockyCards cards={cards} />}
 {card_type === "basic" && <Basic cards={cards} />}
+{card_type === "info" && <InfoCard cards={cards} />}
+<!-- {card_type === "stats_grid" && <StatsGrid cards={cards} data={data} />} -->
