--- a/src/components/Contact/FullContact.astro
+++ b/src/components/Contact/FullContact.astro
@@ -15,7 +15,7 @@ interface Card {
 const { page } = Astro.props;
 ---
 
-<section id="contact-us" class="contact full-width" data-highlight="true">
+<section id="contact-us" class="container contact full-width" data-highlight="true">
     <Container>
         <article>
             <h2 class="contact__title">{page.title}</h2>
