--- a/src/components/Services/Services.astro
+++ b/src/components/Services/Services.astro
@@ -8,7 +8,7 @@ import Cards from "@components/Cards/Cards.astro";
 const { page } = Astro.props;
 ---
 
-<div id="services" class="services">
+<div id="services" class="container services">
     <Container>
         <h2 class="services__title">{page.title}</h2>
         <p>{page.excerpt}</p>
@@ -16,6 +16,7 @@ const { page } = Astro.props;
             <Cards
                 card_type={page.card_grid_type}
                 cards={page.expand.card_grid}
+                data={page}
             />
         </div>
     </Container>
