--- a/src/components/About/fancy_about.css
+++ b/src/components/About/fancy_about.css
@@ -1,12 +1,3 @@
-.fancy-about {
-    /* background-color: var(--clr-primary-darker); */
-    padding-block: var(--container-padding-block);
-}
-
-.fancy_about__content--top {
-    /* color: oklch(from var(--clr-primary-darker) calc(l + .90) c h); */
-}
-
 .fancy_about__image {
     justify-self: end;
     object-fit: contain;
@@ -19,8 +10,6 @@
     display: flex;
     flex-direction: column;
     gap: var(--size-3);
-
-    /* color: oklch(from var(--clr-primary-darker) calc(l + .90) c h); */
 }
 
 .fancy_about_grid .wrapper {
@@ -34,9 +23,9 @@
     border: 2px solid transparent;
     border-radius: var(--size-3);
 
-    color: oklch(from var(--clr-primary-darker) calc(l + .90) c h);
-    background-color: oklch(from var(--clr-primary-darker) calc(l + .90) c h / .05);
-    border-color: oklch(from var(--clr-primary-darker) calc(l + .90) c h / .15);
+    color: var(--clr-neutral-100);
+    background-color: var(--clr-neutral-50);
+    border-color: var(--clr-neutral-300);
 }
 
 .content {
@@ -72,7 +61,7 @@
         gap: var(--size-2);
         align-items: center;
         justify-content: center;
-        color: oklch(from var(--clr-primary-darker) calc(l + .90) c h);
+        color: var(--clr-neutral-100);
     }
 
     .fancy_about__content--top h2 {
