--- a/src/components/Cards/Blocky/card.module.css
+++ b/src/components/Cards/Blocky/card.module.css
@@ -1,36 +1,39 @@
 .card_grid {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: auto;
     gap: var(--size-2);
 }
 
 .card_grid article {
     grid-column: 1 / -1;
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    width: 100%;
-
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 250px 1fr;
-
     outline: 2px solid var(--clr-neutral);
+    background-color: var(--clr-neutral-light);
+}
+
+.card_grid article :global(.custom_image) {
+    aspect-ratio: 16/9;
+    width: 100%;
 }
 
 .image_component__image {
-    object-fit: cover;
-    object-position: center;
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .card_grid article>div {
-    width: 100%;
-    height: 100%;
+    flex: 1;
     padding: var(--size-3);
-    /* margin: var(--size-1); */
     color: var(--clr-neutral-darker);
-    background-color: var(--clr-neutral-light);
+}
+
+.card_grid article h3 {
+    margin-top: 0;
+    margin-bottom: var(--size-2);
 }
 
 @media (min-width: 768px) {
@@ -43,72 +46,5 @@
     .card_grid article:nth-child(4),
     .card_grid article:nth-child(5) {
         grid-column: span 3;
-    }
-}
-
-@media (min-width: 769px) {
-
-    .card_grid {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: auto;
-        gap: var(--size-2);
-    }
-
-    .card_grid article {
-        height: 100%;
-        width: 100%;
-
-        display: grid;
-        grid-template-columns: var(--size-2) auto var(--size-2);
-        grid-template-rows: var(--size-2) 250px 1fr var(--size-2);
-        outline: 2px solid var(--clr-neutral);
-    }
-
-    .card_grid article>* {
-        grid-column: 1 / -1;
-    }
-
-    .card_grid article>picture {
-        grid-row: 1 / 3;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -1;
-    }
-
-    .card_grid article>div {
-        grid-row: 3 / -1;
-        justify-self: end;
-        align-self: end;
-
-        width: 100%;
-        height: 100%;
-        padding: var(--size-3);
-        /* margin: var(--size-1); */
-
-        color: var(--clr-neutral-darker);
-        background-color: var(--clr-neutral-light);
-    }
-
-    .card_grid article:not(:nth-child(4)),
-    .card_grid article:not(:nth-child(5)) {
-        grid-column: span 2;
-    }
-
-    .card_grid article:nth-child(4),
-    .card_grid article:nth-child(5) {
-        grid-column: span 3;
-    }
-
-    .card_grid article:nth-child(4)>picture,
-    .card_grid article:nth-child(5)>picture {
-        grid-row: 1 / -1;
-    }
-
-    .card_grid article:nth-child(4)>div,
-    .card_grid article:nth-child(5)>div {
-        grid-column: 2 / -2;
-        grid-row: 3 / -2;
     }
 }
