--- a/src/components/Contact/full_contact.css
+++ b/src/components/Contact/full_contact.css
@@ -1,14 +1,10 @@
-.contact {
-    padding: var(--container-padding-block) 0;
-}
-
 .location__info {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     gap: var(--size-8);
     padding-top: var(--size-8);
 
-    border-top: 2px solid oklch(from var(--clr-primary-darker) calc(l + .20) c h);
+    border-top: 2px solid var(--clr-neutral-800);
 }
 
 .contact__info {
@@ -47,7 +43,7 @@
 
 .info--location a:hover,
 .info--location a:hover~svg {
-    color: oklch(from var(--clr-primary-darker) calc(l + .80) c calc(h + 180));
+    color: var(--clr-neutral-50);
 }
 
 .info--location a~svg {
@@ -62,6 +58,6 @@
         gap: var(--size-4);
         padding-top: var(--size-8);
 
-        border-top: 2px solid oklch(from var(--clr-primary-darker) calc(l + .20) c h);
+        border-top: 2px solid var(--clr-neutral-800);
     }
 }
